# chip_eight

./: .gitignore  Cargo.toml  README.md
src/: args.rs  chip.rs  controls.rs  execute.rs  font.rs  main.rs  memory.rs  nibble.rs  nibbles.rs  opcode.rs  registers.rs  stack.rs  timers.rs
src/display/: display_trait.rs  mod.rs  terminal.rs  termion.rs
