[package]
name = "chip_eight"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.54", features = ["derive"] }
env_logger = "0.11.8"
fern = "0.7.1"
log = "0.4.29"
rand = "0.8.5"
termion = "3.0.0"
